# arq-metabolica-mx

./: .env.example  .gitignore  README.md  Untitled-1.py  auth.py  config.py  database.py  datos_inegi_puebla.csv  descargar_datos_inegi.py  iarri.py  main.py  main3.py  mapa_arq.html  pyproject.toml  sesion_local.json
arq_metabolica_flet/: README.md  main.py  pyproject.toml
assets/: mapa_arq.html
config/: settings.py
core/: datos.py  iarm.py  iarri.py
data/: auth_repository.py  resultados_repository.py  supabase_client.py
tests/: test_iarri.py
ui/: app_shell.py  theme.py
ui/components/: badge_riesgo.py  barra_progreso.py  encuesta_widget.py  tarjeta.py
ui/screens/: calculadora_screen.py  educacion_screen.py  gamificacion_screen.py  inicio_screen.py  login_screen.py  mapa_screen.py  perfil_screen.py  recomendaciones_screen.py  territorial_screen.py  test_screen.py
